# rust-experiments

./: .gitignore  Cargo.toml  rustfmt.toml
backend/: Cargo.toml
backend/src/: dval.rs  eval.rs  expr.rs  main.rs
execution-engine/: Cargo.toml
execution-engine/src/: dval.rs  errors.rs  eval.rs  expr.rs  lib.rs  runtime.rs
hello-rocket/: Cargo.toml
hello-rocket/src/: main.rs
macros/: lib.rs
src/: dval.rs  errors.rs  eval.rs  expr.rs  lib.rs  main.rs  runtime.rs
src/macros/: Cargo.toml  lib.rs
